FIX section hero add flex-basis + gap + max-whidth

--- a/style.css
+++ b/style.css
@@ -2,12 +2,17 @@
 REGOLE GENERALI
 *************************/
 
+@import url('https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@100;200;400;600;900&family=Open+Sans:ital,wght@0,300;0,400;1,500&display=swap');
+
+html{
+    font-family: 'Chivo Mono', monospace;
+    font-family: 'Open Sans', sans-serif;
+}
+
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Chivo Mono', monospace;
-    font-family: 'Open Sans', sans-serif;
 }
 
 img {
@@ -38,7 +43,7 @@ REGOLE HEADER
 }
 
 .conteiner-nav {
-    padding: 5px 10px ;
+    padding: 15px 10px ;
 }
 
 .col-header p {
@@ -49,11 +54,11 @@ REGOLE HEADER
     background-color: rgb(0,97,255);
     border: none;
     color: white;
+    white-space: nowrap;
 }
 
 .btn{
     padding: 10px 15px;
-    margin: 20px 0;
 }
 
 /****************************
@@ -69,15 +74,14 @@ Primo conteiner
 }
 
 .conteiner-first {
-    width: 800px;
+    max-width: 1250px;
     margin: 0 auto;
-    height: 470px;
 }
 
 .row-title {
     justify-content: center;
     padding: 30px 0;
-    font-size: 40px;
+    font-size: 60px;
 }
 
 .row-first {
@@ -85,9 +89,23 @@ Primo conteiner
 }
 
 .arrow {
-    padding-top: 35px;
-    font-size: 30px;
+    margin-top: auto;
+    font-size: 40px;
 }
+
+.col-hero {
+    flex-basis: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 40px;
+    padding-bottom: 20px;
+}
+
+.col-img{
+    flex-basis: 70%;
+}
+
 
 /* 
 secondo conteiner
